--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       href="https://fonts.googleapis.com/css?family=Exo:400,600,700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/index.css" />
-    <link rel="stylesheet" href="/main.css" />
+    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="main.css" />
   </head>
   <body>
     <div class="header">
@@ -31,6 +31,6 @@
     </div>
 
     <div id="app"></div>
-    <script src="/bundle.js"></script>
+    <script src="bundle.js"></script>
   </body>
 </html>
